# proj-ROS-Yolo--

./: .gitignore  CONTEXT.md  README.md  install.sh  kill_all.sh  monitor_g2.sh  start_g2.sh  start_g3_simple.sh
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/excavator_msgs/: ObstacleArray.h  ObstacleInfo.h  RiskState.h  (+7 more)
docs/: 操作手册-v1.1-real-sim.md
docs/adr/: ADR-001-ros-noetic.md  ADR-002-yolov5-ghostnetv2.md  ADR-003-deepsort-tracking.md  ADR-004-rrt-star-cpp.md  ADR-005-risk-thresholds.md  ADR-006-simulation-validation.md
results/: metrics_test_multi_threat.csv  metrics_test_pedestrian.csv  metrics_test_static.csv  metrics_test_vehicle.csv  summary.csv  table1_collision_comparison.csv  table2_response_time_stats.csv  table3_false_positive_by_mode.csv
src/excavator_decision/: CMakeLists.txt  package.xml
src/excavator_description/: CMakeLists.txt
src/excavator_gazebo/: CMakeLists.txt  package.xml
src/excavator_monitor/: CMakeLists.txt
src/excavator_msgs/: CMakeLists.txt
src/excavator_msgs/msg/: ObstacleArray.msg  ObstacleInfo.msg  RiskState.msg  SystemState.msg
src/excavator_msgs/srv/: SpawnObstacle.srv
src/excavator_perception/: CMakeLists.txt
src/excavator_planner/: CMakeLists.txt  package.xml
src/excavator_planner/config/: planner_params.yaml
src/excavator_planner/include/excavator_planner/: rrt_star_planner.h
src/excavator_planner/launch/: planner.launch
src/excavator_planner/src/: rrt_star_planner.cpp
src/excavator_risk/: .coverage  CMakeLists.txt
tasks/: current.md  decisions.md  phase7_runbook.md  progress.md
(+93 files in other folders)
